<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="s.yarlykov.izinavigation.ui.fragments.FragmentHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <deepLink
            android:id="@+id/deepLinkHome"
            app:action="ACTION_VIEW"
            app:mimeType="text/html"
            app:uri="sy://main/home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="s.yarlykov.izinavigation.ui.fragments.FragmentDashboard"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <deepLink
            android:id="@+id/deepLinkDash"
            app:action="ACTION_VIEW"
            app:mimeType="text/html"
            app:uri="sy://main/dash" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="s.yarlykov.izinavigation.ui.fragments.FragmentNotifications"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <deepLink
            android:id="@+id/deepLinkNotify"
            app:action="ACTION_VIEW"
            app:mimeType="text/html"
            app:uri="sy://main/notify" />
    </fragment>

    <dialog
        android:id="@+id/navigation_selection_dialog"
        android:name="s.yarlykov.izinavigation.ui.SelectionDialogFragment"
        android:label="@string/title_schedule">
        <deepLink app:uri="izi://selection/{index}" />
        <argument
            android:name="index"
            android:defaultValue="-1L"
            app:argType="long" />
    </dialog>

    <action
        android:id="@+id/action_selection_dialog"
        app:destination="@id/navigation_selection_dialog" />
</navigation>